--- a/src/app/componentes/saludar/saludar.component.html
+++ b/src/app/componentes/saludar/saludar.component.html
@@ -1,1 +1,19 @@
-<p>saludar works!</p>
+<p>Problema 1</p>
+<br>
+<small>saludar.component.html</small>
+<input type="text" name="" id="">
+<p>
+    Soy un parrafo.
+</p>
+
+<div>
+    <input type="text" #name>
+    <br>
+    <button (click)="onButtonClick(names.value): names.value='' ">Añadir nombre</button>
+</div>
+
+<p (click)="onClick()">
+    
+    Hola {{nombre}}
+
+</p>
