--- a/src/app/componentes/saludar/saludar.component.html
+++ b/src/app/componentes/saludar/saludar.component.html
@@ -1,19 +1,24 @@
-<p>Problema 1</p>
+<body>
+    <p>Problema 1</p>
+
+
 <br>
 <small>saludar.component.html</small>
 <input type="text" name="" id="">
 <p>
     Soy un parrafo.
 </p>
-
+<fieldset>
 <div>
     <input type="text" #name>
-    <br>
+    <br><br>
     <button (click)="onButtonClick(names.value): names.value='' ">Añadir nombre</button>
 </div>
-
+<br>
 <p (click)="onClick()">
     
     Hola {{nombre}}
 
 </p>
+</fieldset>
+</body>
